# DailyWall

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  database.py  logging_utils.py  main.py  models.py  schemas.py
app/api/: filters.py  health.py  images.py  responses.py  router.py  wallpapers.py
app/services/: filter_service.py  health_service.py  image_service.py  wallpaper_service.py
app/utils/: image_utils.py
crawler/: bing_fetcher.py  crawler.py  downloader.py
deploy/systemd/: dailywall-api.service  dailywall-crawl-test.service  dailywall-crawl-test.timer  dailywall-crawl.service  dailywall-crawl.timer
docs/: API.md  COVERAGE.md  CRAWL.md  ERROR_RECORD.md  INSTALL.md  MAINTENANCE.md  STRUCTURE.md  coverage.xml
scripts/: backup.py  check.py  crawl.py  run_crawl_job.sh  systemd_menu.sh
tests/: conftest.py  test_api.py  test_bing_fetcher.py  test_crawler.py  test_database.py  test_downloader.py  test_image_service.py  test_image_utils.py  test_logging_utils.py  test_responses.py  test_scripts.py  test_services.py
